(copy_files ./src/ollvm/*.ml)

(copy_files ./src/ollvm/*.mli)

(copy_files ./src/ollvm/*.mll)

(copy_files ./src/ollvm/*.mly)

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(menhir
 (modules ollvm_parser)
 (flags --explain --dump)
 (infer true))

(ocamllex
 (modules ollvm_lexer))

(library
 (public_name ollvm)
 (name ollvm)
 (modules ollvm_ast ollvm_ez ollvm_printer ollvm_parser ollvm_lexer ollvm))
